feat : 그룹 목록 조회 API에서 즐겨찾기 여부 추가 (#95)
* feat : 그룹 목록 조회 시, 즐겨찾기 여부 필드 추가

* test : 그룹 목록 조회 시, 즐겨찾기 여부 필드 추가 테스트 수정